# ESAA-supervisor

./: README.md  pyproject.toml  start-esaa-supervisor.bat
.roadmap/: PARCER_PROFILE.agent-spec.yaml  activity.jsonl  agent-capabilities.json  init.yaml  issues.json  issues.schema.json  lessons.json  playbooks.security.json  roadmap.json  roadmap.schema.json  roadmap.security.json  roadmap.ui-redesign.json
.roadmap/.claude/: settings.local.json
.roadmap/chat_sessions/: 091df15d-cfda-4972-99fe-2b050da12f16.json  1eb6b896-372c-4469-a734-94c786283dab.json  b9650364-38ec-44d4-a7e2-4b8b0a6863d6.json
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/tests/: __init__.py  test_adapters.py  test_agent_model_catalog.py  test_artifact_discovery.py  test_canonical_store.py  test_encoding_fallbacks.py  test_event_writer.py  test_health.py  test_projector.py  test_run_engine.py  test_runs_api.py  test_selector.py  test_state_api.py  test_validators.py
docs/poc/: acceptance-checklist.md  agent-adapters-spec.md  agent-routing-policy-spec.md  backend-api-contracts.md  canonical-artifacts-spec.md  e2e-smoke-report.md  final-report.md  frontend-dashboard-spec.md  frontend-state-and-routes-spec.md  known-limitations.md  operator-runbook.md  (+2 more)
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
scripts/: finalize_task.py  generate_risk_matrix.py  run_poc_smoke.sh
tests/: conftest.py  test_adapters_llm.py  test_projection_workflow.py  test_service_run_and_boundaries.py  test_store_and_compat.py  test_verify_and_replay.py
(+196 files in other folders)
